article nie adress

--- a/index.html
+++ b/index.html
@@ -24,30 +24,36 @@
       </p>
     </header>
 
-      <section id="about">
-        <h2 id="about-header">O mnie</h2>
+    <section id="about">
+      <h2 id="about-header">O mnie</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque officiis
+        cum iste asperiores velit illum. Labore, sequi. Dolorum doloremque,
+        laudantium, animi tempore eveniet unde officia dolores enim dolorem
+        impedit veritatis.
+      </p>
+    </section>
+
+    <section id="contact">
+      <h2 id="contact-header">Kontakt</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia
+        aliquid est iure voluptatum amet nostrum, repellat voluptates! Quibusdam
+        fugiat sequi, beatae, inventore architecto aliquid illum earum incidunt
+        cumque eum dolorum.
+      </p>
+
+      <article id="contact-content">
+        <h3>Tu mnie znajdziesz</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque
-          officiis cum iste asperiores velit illum. Labore, sequi. Dolorum
-          doloremque, laudantium, animi tempore eveniet unde officia dolores
-          enim dolorem impedit veritatis.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus
+          aliquam, rem itaque, expedita quos reprehenderit repudiandae quisquam
+          qui non ullam corporis quae mollitia? Fugit ab placeat praesentium a
+          maxime labore. <a href="Link">Link</a>
         </p>
-      </section>
+      </article>
+    </section>
 
-      <section id="contact">
-        <h2 id="contact-header">Kontakt</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia
-          aliquid est iure voluptatum amet nostrum, repellat voluptates!
-          Quibusdam fugiat sequi, beatae, inventore architecto aliquid illum
-          earum incidunt cumque eum dolorum.
-        </p>
-
-        <address id="contact-content">
-            <h3>Tu mnie znajdziesz</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus aliquam, rem itaque, expedita quos reprehenderit repudiandae quisquam qui non ullam corporis quae mollitia? Fugit ab placeat praesentium a maxime labore. <a href="Link">Link</a></p>
-        </section>
-
-        <footer>copywright by A. Kowalski</footer>
+    <footer>copywright by A. Kowalski</footer>
   </body>
 </html>
